Swagger doc finished
